<resources>
    <string name="app_name">Design</string>
    <string name="regAccountInfo">%s%s</string>
    <string name="addImageIV_contentDescription">Item Image</string>
    <string name="header_text">Sell</string>
    <string name="nextB_text">Next</string>
    <string name="descriptionET_hint">Describe your product..</string>
    <string name="addImageTV_text">Add Image</string>
    <string name="titleTV_text">Title</string>
    <string name="categoryTV_text">Category*</string>
    <string name="sizeTV_text">Size*</string>
    <string name="brandTV_text">Brand*</string>
    <string name="conditionTV_text">Condition*</string>
    <string name="descriptionTV_text">Description</string>
    <string name="priceTV_text">Price*</string>
    <string name="finalPayoutTV_text">Final Payout</string>
    <string name="origPriceTV_text">Orig. Price</string>
    <string name="sellerAddressTV_text">Seller Address</string>
    <string name="fullNameTV_text">Full Name</string>
    <string name="mobileTV_text">Mobile*</string>
    <string name="addressTV_text">Address*</string>
    <string name="cityTV_text">City*</string>
    <string name="zipCodeTV_text">Zip Code*</string>
    <string name="countryTV_text">Country</string>
    <string name="enableDeliveryTV_text">We coordinate all delivery for you and the buyer (For when your items is sold)</string>
    <string name="enableDeliveryLableTV_text">Enable Delivery</string>
    <string name="selfTransferLableTV_text">Self-transfer</string>
    <string name="selfTransferTV_text">You coordinate the handover yourself\n(For when your item is sold)</string>
    <string name="packageSpecsHeadingTV_text">Package Specifications for\n when you send your sold item with dao</string>
    <string name="packageSpecsInstructionsTV_text">Choose a format that fits to your item\n (For when your item is sold)</string>
    <string name="readMoreTV_text"><u>Read more</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveB_text">Save</string>
    <string name="accountNoTIL_hint">Account no.*</string>
    <string name="regNoTIL_text">Reg. nr0.*</string>
    <string name="bankInfoNote1_text">Write your bank account information for receiving the money for your sold items.</string>
    <string name="bankInfoNote2_text">Once you have field out this section, your information will be stored securely in your profile.</string>
    <string name="bankInfoHeadingTV_text">Bank Information</string>
    <string name="previewAdB_text">Preview Ad</string>
    <string name="postAdB_text">Post ad</string>
    <string name="editB_text">Edit</string>
</resources>