<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:elevation="0dp"
            app:layout_constraintBottom_toTopOf="@id/scrollViewSV"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                android:theme="@style/Widget.Design.AppBar"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp">

                <TextView
                    android:id="@+id/toolBarTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/header_text"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/toolBarB"
                    style="@style/Widget.Design.NoOutline"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_baseline_arrow_back_ios_24"
                    app:iconPadding="0dp"
                    app:iconSize="24dp" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/scrollViewSV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintVertical_chainStyle="spread"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/childCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/enableDeliveryCL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/enableDeliveryS"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12.5dp"
                        android:thumb="@drawable/custom_thumb"
                        app:layout_constraintEnd_toStartOf="@id/enableDeliveryLableTV"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:switchMinWidth="85dp"
                        app:track="@drawable/custom_track" />

                    <TextView
                        android:id="@+id/enableDeliveryLableTV"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="12.5dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:gravity="center"
                        android:text="@string/enableDeliveryLableTV_text"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/enableDeliveryS"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@id/enableDeliveryS"
                        app:layout_constraintTop_toTopOf="@id/enableDeliveryS" />

                    <TextView
                        android:id="@+id/enableDeliveryTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/enableDeliveryTV_text"
                        android:textColor="@color/black"
                        android:textSize="12dp"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/enableDeliveryLableTV" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/packageSpecsCL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@id/enableDeliveryLableTV">

                        <TextView
                            android:id="@+id/packageSpecsHeadingTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="25dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/packageSpecsHeadingTV_text"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            app:layout_constraintBottom_toTopOf="@id/packageSpecsInstructionsTV"
                            app:layout_constraintTop_toTopOf="parent" />\

                        <TextView
                            android:id="@+id/packageSpecsInstructionsTV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="25dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/packageSpecsInstructionsTV_text"
                            android:textColor="@color/black"
                            android:textSize="9sp"
                            app:layout_constraintTop_toBottomOf="@+id/packageSpecsHeadingTV" />

                        <TextView
                            android:id="@+id/readMoreTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="25dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/readMoreTV_text"
                            android:textColor="@color/black"
                            android:textSize="9sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/packageSpecsInstructionsTV" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/rect_border"
                            app:layout_constraintTop_toBottomOf="@id/readMoreTV">

                            <com.example.design.WeightSelectable
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@drawable/rbl_lines"
                                app:mainHeading="Light item"
                                app:subHeading="Smaller garments  jewellery fits into this category (up to 0,5 kg)"
                                app:currency="DKK"
                                app:price="42" />
                            <com.example.design.WeightSelectable
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@drawable/rbl_lines"
                                app:mainHeading="Light item"
                                app:subHeading="Smaller garments  jewellery fits into this category (up to 0,5 kg)"
                                app:currency="DKK"
                                app:price="42" />
                            <com.example.design.WeightSelectable
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@drawable/rbl_lines"
                                app:mainHeading="Light item"
                                app:subHeading="Smaller garments  jewellery fits into this category (up to 0,5 kg)"
                                app:currency="DKK"
                                app:price="42" />
                            <com.example.design.WeightSelectable
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:background="@drawable/rbl_lines"
                                app:mainHeading="Light item"
                                app:subHeading="Smaller garments  jewellery fits into this category (up to 0,5 kg)"
                                app:currency="DKK"
                                app:price="42" />


                        </RadioGroup>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/selfTransferS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="49dp"
                    android:layout_marginEnd="12.5dp"
                    android:paddingBottom="2dp"
                    android:thumb="@drawable/custom_thumb"
                    app:layout_constraintEnd_toStartOf="@id/selfTransferLableTV"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/enableDeliveryCL"
                    app:switchMinWidth="85dp"
                    app:track="@drawable/custom_track" />

                <TextView
                    android:id="@+id/selfTransferLableTV"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="12.5dp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:gravity="center"
                    android:text="@string/selfTransferLableTV_text"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/selfTransferS"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@id/selfTransferS"
                    app:layout_constraintTop_toTopOf="@id/selfTransferS" />

                <TextView
                    android:id="@+id/selfTransferTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/selfTransferTV_text"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/selfTransferLableTV" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextB"
            android:layout_width="120dp"
            android:layout_height="34dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/nextb_states"
            style="@style/Widget.Design.NextButton"
            android:enabled="false"
            android:fontFamily="@font/montserrat_medium"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:text="@string/nextB_text"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollViewSV"
            app:layout_constraintVertical_chainStyle="spread" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>